fixed internal links being covered

--- a/src/apps/content-editor/src/app/views/ItemCreate/ItemCreate.less
+++ b/src/apps/content-editor/src/app/views/ItemCreate/ItemCreate.less
@@ -19,6 +19,7 @@
     & > div {
       padding: 0;
       height: initial;
+      overflow: initial;
     }
   }
 }
